[package]
name = "clap-yaml-json-demo"
version = "0.1.0"
edition = "2021"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["env", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
color-eyre = "0.6.2"
